[gd_scene load_steps=6 format=3 uid="uid://bv7dltqbb6248"]

[ext_resource type="Script" path="res://InGameUI/Control.gd" id="1_xhoik"]
[ext_resource type="Texture2D" uid="uid://0cj8tjdppofj" path="res://UI Assets/start_idle.png" id="2_0urhe"]
[ext_resource type="Texture2D" uid="uid://b4vc2mydsx5se" path="res://UI Assets/start_hover.png" id="3_c5h0o"]
[ext_resource type="Texture2D" uid="uid://c427t26qu01cg" path="res://UI Assets/quit_idle.png" id="4_o1sih"]
[ext_resource type="Texture2D" uid="uid://76n3nrsenfwq" path="res://UI Assets/quit_hover.png" id="5_e1eco"]

[node name="InGameUI" type="CanvasLayer"]

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_xhoik")

[node name="PauseMenu" type="ColorRect" parent="Control"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_right = 28.925
anchor_bottom = 16.15
offset_right = -4.57764e-05
offset_bottom = -6.10352e-05
grow_horizontal = 2
grow_vertical = 2
color = Color(0.694118, 0.760784, 0.921569, 0.447059)

[node name="CenterContainer" type="CenterContainer" parent="Control/PauseMenu"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.446
anchor_top = 0.322
anchor_right = 0.554
anchor_bottom = 0.678
offset_left = 0.477989
offset_top = -0.0120173
offset_right = -0.478023
offset_bottom = 0.0119787
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/PauseMenu/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 40

[node name="Resume" type="TextureButton" parent="Control/PauseMenu/CenterContainer/VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("2_0urhe")
texture_pressed = ExtResource("3_c5h0o")
texture_hover = ExtResource("3_c5h0o")
texture_focused = ExtResource("3_c5h0o")

[node name="Quit" type="TextureButton" parent="Control/PauseMenu/CenterContainer/VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("4_o1sih")
texture_pressed = ExtResource("5_e1eco")
texture_hover = ExtResource("5_e1eco")
texture_focused = ExtResource("5_e1eco")

[node name="Pause" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 26.925
anchor_top = 0.5
anchor_right = 28.5
anchor_bottom = 1.45
offset_left = -4.57764e-05
offset_top = -4.0
offset_right = -7.62939e-05
grow_horizontal = 0
grow_vertical = 0
text = "Pause"

[node name="Labels" type="Control" parent="Control"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="SheepCounter" type="Label" parent="Control/Labels"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="Level" type="Label" parent="Control/Labels"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="Timer" type="Label" parent="Control/Labels"]
layout_mode = 0
offset_left = 1104.0
offset_top = 608.0
offset_right = 1144.0
offset_bottom = 631.0

[connection signal="pressed" from="Control/PauseMenu/CenterContainer/VBoxContainer/Resume" to="Control" method="_on_resume_pressed"]
[connection signal="pressed" from="Control/PauseMenu/CenterContainer/VBoxContainer/Quit" to="Control" method="_on_quit_pressed"]
[connection signal="pressed" from="Control/Pause" to="Control" method="_on_pause_pressed"]
